more work, starting to get rendering code. need to do that soon

--- a/antworld.cfg
+++ b/antworld.cfg
@@ -10,7 +10,12 @@ yNestTileSize 1.f
 
 surfaceWidth 300
 surfaceHeight 150
+surfaceXTileSize 2.f
+surfaceYTileSize 2.f
 
 antSpeed 1.f
 
 locationEqualsDist 1.f 
+
+foodRad = 10.f
+foodAmt = 100
