surface world is now rendering correctly, now need to start doing actual gameplay

--- a/antworld.cfg
+++ b/antworld.cfg
@@ -5,17 +5,17 @@ eggTimeLeft 600
 
 nestWidth 30
 nestHeight 40
-xNestTileSize 1.f
-yNestTileSize 1.f
+xNestTileSize 12.f
+yNestTileSize 12.f
 
-surfaceWidth 300
-surfaceHeight 150
-surfaceXTileSize 2.f
-surfaceYTileSize 2.f
+surfaceWidth 35
+surfaceHeight 25
+surfaceXTileSize 20.f
+surfaceYTileSize 20.f
 
 antSpeed 1.f
 
 locationEqualsDist 1.f 
 
-foodRad = 10.f
-foodAmt = 100
+foodRad 75.f
+foodAmt 50
