ants can now move between surface and nest. need to add proper pathfinding though

--- a/antworld.cfg
+++ b/antworld.cfg
@@ -1,7 +1,6 @@
 workerHealth 40
 nurseHealth 20
 warriorHealth 60
-eggTimeLeft 600
 
 nestWidth 30
 nestHeight 40
@@ -19,3 +18,6 @@ locationEqualsDist 1.f
 
 foodRad 75.f
 foodAmt 50
+
+eggTime 300
+hatchTime 600
