added health and hunger, also starting working on graphics a tiny bit

--- a/antworld.cfg
+++ b/antworld.cfg
@@ -1,6 +1,10 @@
 workerHealth 40
 nurseHealth 20
 warriorHealth 60
+queenHealth 100
+eggHealth 10
+
+antHungerTime 1000
 
 nestWidth 30
 nestHeight 40
@@ -19,5 +23,9 @@ locationEqualsDist 1.f
 foodRad 75.f
 foodAmt 50
 
-eggTime 300
-hatchTime 600
+eggTime 150
+hatchTime 200
+
+fightDistance 10
+
+antPartDecay 500
